Fixed SVG image contrast issues.

--- a/themes/pasztor.at/assets/scss/_typography.scss
+++ b/themes/pasztor.at/assets/scss/_typography.scss
@@ -328,6 +328,7 @@ html, body {
     position: relative;
     text-align: center;
     img {
+      background: $color-background-card-light;
       border-radius: $border-radius;
       max-width:100%;
     }
