--- a/themes/pasztor.at/assets/scss/code.scss
+++ b/themes/pasztor.at/assets/scss/code.scss
@@ -576,6 +576,7 @@
 
     /* NameVariable .*/
     .nv {
+      color:#f8f8f2;
     }
 
     /* NameVariableClass .*/
